--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             <article id="resultContainer">
                 <p id="winner"></p>
                 <p id="lost"></p>
+                <p>Lettres déjà proposées : <span id="lettersUsed"></span></p>
+
             </article>
         </div>
     </section>
