--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <header>
         <h1>Bienvenue au jeu du Pendu</h1>
         <button type="button" id="start">Start</button>
+        <audio id="mainAudio" src="/img/with-friends-again-fantasy-instrumental-172580.mp3"></audio>
     </header>
 
 
