suppresion-control-main-audio

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <footer>
         <audio id="audioerror" src="/img/error-126627.mp3"></audio>
         <audio id="audioCorrect" src="/img/correct-83487.mp3"></audio>
-        <audio id="mainAudio" controls src="/img/with-friends-again-fantasy-instrumental-172580.mp3"></audio>
+        <audio id="mainAudio" src="/img/with-friends-again-fantasy-instrumental-172580.mp3"></audio>
     </footer>
 
     <script src="script/main.js"></script>
